static/css/bar.css
	body {
#		font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
#		font-size:13px;
		#color:#333;
#		background:url("../images/bar/gradient.png") repeat-x;
#		text-align:right;
#		position: relative;		
	}
	
	#bar {
	        position: absolute;
		left: 0;
		right: 0;
		top: 0;
                font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
		height: 35px;
		font-size:18px;
		color:#333;
		background:url("../images/bar/gradient.png") repeat-x;
		text-align:right;
	        #display: none;
		z-index: 201;
        }	

	#shadow {
	        position: absolute;
		background:url("../images/bar/shadow.png") repeat-x;
		height:6px;
		left:0;
		right:0;
		top: 35px;
		z-index:201;
		#display: none;
	}
	a {
		outline: none;
	}

	#logo {
	    float: left;
	    margin-top: 4px;
	    margin-left: 10px;
	
        }
	#logo img {
	    height: 28px;
        }

        #content {
	    margin-top: 5px;
	    margin-right: 10px;
	    width: 80%;	    
	    float: right;
	    text-align: right;
        }

	#copy-text {
           #opacity: 0;
	   #filter:alpha(opacity=0);
	   margin-top: 2px;
	   position: absolute;
	   right: 170px;
	   color: #CA0002;
	}

	#buttons {
	   float: right;
	   width: 140px;
        }

	button#twitter-login, button#twitter-share {
		width:60px;
		height:24px;
		background:url("../images/bar/twitter.png") no-repeat top;
		margin-right:2px;
		cursor:pointer;
		margin-left:10px;
		float:right;
                margin-top: 0px;
		display: none;
	} 
	button#facebook-login, button#facebook-share {
		width:62px;
		height: 24px;
		background:url("../images/bar/facebook.png") no-repeat top;
		cursor:pointer;
		display: none;
	}
	button#twitter-login:hover, button#twitter-share:hover {
		background-position:center;
	} 
	button#twitter-login:active, button#facebook-login:active, button#twitter-share:active, button#facebook-share:active{
		background-position:bottom;
	}
	#external-site {
		height:100%;
		left:0;
		margin:0;
		overflow-x:hidden;
		overflow-y:auto;
		padding:0;
		position:absolute;
		right:0;
		top:44px;
		width:100%;
		z-index:200;
	}


	

